--- a/style.css
+++ b/style.css
@@ -22,11 +22,17 @@ h1 {
 }
 
 #userCity {
-  margin-top: 3%;
+  margin: 0 auto;
+  margin-top: 5%;
+  margin-bottom: 0;
+  display: flex;
+  justify-content: center;
 }
 
 .left-buttons {
-  margin-top: 2%;
+  padding-bottom: 5%;
+  display: flex;
+  justify-content: center;
 }
 
 .card-text {
