--- a/style.css
+++ b/style.css
@@ -49,3 +49,9 @@ h1 {
   justify-content: center;
   text-align: center;
 }
+
+.city-buttons {
+  width: 100%;
+  padding: 3px;
+  margin-top: 2%;
+}
